test : 요구사항 1 - Optional을 활용해 조건에 따른 반환